Fixed CSS not applied to whole table on mobile

--- a/src/app/dashboard/dashboard-stats-table/dashboard-stats-table.component.scss
+++ b/src/app/dashboard/dashboard-stats-table/dashboard-stats-table.component.scss
@@ -5,3 +5,8 @@
   flex-direction: column;
   margin-bottom: 5px;
 }
+
+ng2-smart-table ::ng-deep table {
+  max-width: 300%;
+  width: 100%;
+}
